	   of tab and window titles.
	2. Added options --veryBright and --boldColors to control how bold
	   primary colors are rendered.
	3. Added --useFifo option, to make mrxvt listen for macros on a fifo.
	   Code based on patch by Jozef Vesely.
	4. Added Raise macro to "raise" the mrxvt window. Thanks to Jozef
	   Vesely for the patch.

Jimmy Zhou <jimmyzhou@users.sourceforge.net>
    * Enhancements:
	1. Check locale for encoding method if it is not specified by -km
	   option or multichar_encoding resource.


0.5.1 to 0.5.2
\-----------------------------------
Gautam Iyer <gi1242@users.sourceforge.net>
    * Bug Fixes:
	0. Did a HUGE REWRITE of the multi-tab code base. Incomplete escape
	   sequences longer cause lockups. Really busy tabs no longer starve
	   everything else!
	1. Fixed detecting xft support if xft-config is missing.
	2. Fixed segfault obtained when the last macro in r->macros is executed
	4. Convert sources from ts=8 to ts=4. Yes ts=8 was a bug :). Added a
	   script ts4to8.pl to do this.
	3. Make text under cursor visible if cursorcolor2 is not defined.
	5. Added "Exec" macro to execute external programs
	6. Added % expansion to macros. %s=selection, %t=tab title, %n=tab#.
	7. Added a menu option to open the selection in a new tab in mutt /
	   w3m, or in firefox.
	8. Implemented a "-into" option to embed mrxvt into. Thanks to Bruno
	   Deferrari <utizoc@gmail.com> for the patch.
	9. Fix buffer overflow. Thanks to Frederik Deweerdt <deweerdt@free.fr>
	   for the patch.
       10. Made -ufbg and -fade options work under Xft ;).
       11. Font specified with --boldFont is correctly handled (even if it's
	   of a different dimension).
       12. Exited tabs are now correctly held. Output from them is not lost
	   even if they exit very quickly.
       13. Rewrote the -ufbg and focus fading code completely. Now works
	   correctly if tabs are switched on on unfocussed window, or if the
	   bg is changed (via an escape sequence) from an inactive tab /