@@ -185,6 +185,15 @@ Mrxvt.macro.Primary+Shift+End:		Scroll +1000000
 Mrxvt.macro.Ctrl+Shift+v:		Paste
 Mrxvt.macro.Shift+Delete:		SetTitle
 
+#
+# Mrxvt Console: Enable the useFifo option, and then open a console in a new
+# tab. Anything typed there is executed as a macro. When done (on clean exit),
+# disable the useFifo option.
+#
+Mrxvt.macro.Ctrl+Shift+c:		UseFifo 1
+Mrxvt.macro.Add+Ctrl+Shift+c:		NewTab "mrxvt Console" \!cat >> /tmp/.mrxvt-%P && echo "UseFifo 0" >> /tmp/.mrxvt-%P
+Mrxvt.macro.Add+Ctrl+Shift+c:		ToggleHold -7
+
 # External programs. In keeping with the Unix "minimalist" philosophy, we don't
 # define these shortcuts by default.
 #
