@@ -97,6 +97,7 @@ void		 rxvt_copy_color                  __PROTO((rxvt_t*, int, int));
 void		 rxvt_set_color                   __PROTO((rxvt_t*, int, const XColor*));
 void             rxvt_init_env                    __PROTO((rxvt_t *r));
 void             rxvt_init_xlocale                __PROTO((rxvt_t *r));
+void		 rxvt_init_fifo	                  __PROTO((rxvt_t *r));
 void             rxvt_init_command                __PROTO((rxvt_t* r));
 CARD32           rxvt_get_desktop                 __PROTO((rxvt_t* r));
 void             rxvt_create_show_windows         __PROTO((rxvt_t* r, int argc, const char* const *argv));
@@ -451,6 +452,7 @@ unsigned short   rxvt_tabbar_rheight            __PROTO((rxvt_t*));
 unsigned int     rxvt_tab_width                 __PROTO((rxvt_t*, const char*));
 int              rxvt_is_tabbar_win             __PROTO((rxvt_t*, Window));
 void             rxvt_tabbar_draw_buttons       __PROTO((rxvt_t*));
+void		 rxvt_adjust_fd_number	        __PROTO((rxvt_t* r));
 void             rxvt_tabbar_change_color       __PROTO((rxvt_t*, int, const char*));
 void             rxvt_tabbar_highlight_tab      __PROTO((rxvt_t*, short, Bool));
 void             rxvt_tabbar_move_tab           __PROTO((rxvt_t*, short));
